--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sudoku solver</title>
-
+    <link rel="icon" type="image/x-icon" href="./board-favicon.png">
     <link href="./style.css" rel="stylesheet" type="text/css">
 
     <!--BOOTSTRAP CDN-->
